Criação-cards- img e descricao ok

--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
             <ul class="menu" id="menu">
                 <!-- <li>
                     <a href="">Jandira</a>
-                </li>
-                <li>
-                    <a href="">Barueri</a>
-                </li>
-                <li>
-                    <a href="">Itapevi</a>
-                </li>
-                <li>
-                    <a href="">Osasco</a>
-                </li> -->
+                </li>-->
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="quadrados" id="quadrados">
+            <!-- <div class="bloco1" id="bloco1">
+                <p></p>
+            </div> -->
+        </div>
+    </main>
 </body>
 </html>
