--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <div class="quadrados" id="quadrados">
             <!-- <div class="bloco1" id="bloco1">
                 <p></p>
+            </div>
+            <div class="bloco2" id="bloco2">
+                <p></p>
+            </div>
+            <div class="bloco3" id="bloco3">
+                <p></p>
             </div> -->
         </div>
     </main>
